# rubiks-cube-simulation-C

./: .gitignore  CMakeLists.txt  compile.sh
include/: cube.h  events.h  main.h  utils.h
shaders/: fragment.glsl  vertex.glsl
src/: cube.c  events.c  main.c  utils.c
